Image text to bottom on landing page

--- a/content/themes/ghost-material/index.hbs
+++ b/content/themes/ghost-material/index.hbs
@@ -33,7 +33,7 @@
 {{! Blog header }}
 <header class="header shaded bg-darken">
   <!-- Content -->
-  <div class="header--content onMiddle container">
+  <div class="header--content onBottom container">
     <h1 class="header--title center">{{@blog.title}}</h1>
     <h5 class="header--subtitle center">{{@blog.description}}</h5>
   </div>
