--- a/content/themes/ghost-material/index.hbs
+++ b/content/themes/ghost-material/index.hbs
@@ -13,17 +13,17 @@
     <div class="navbar--spacer"></div>
     <!-- Links -->
     <nav class="navbar--nav">
-      <a class="navbar--nav-link ripple" href="#!">
-        <i class="mdi mdi-twitter"></i>
-        <span class="hide-on-medium">Twitter</span>
+      <a class="navbar--nav-link ripple" href="https://www.linkedin.com/in/thyagostall">
+        <i class="mdi mdi-linkedin"></i>
+        <span class="hide-on-medium">Linkedin</span>
       </a>
-      <a class="navbar--nav-link ripple" href="#!">
+      <a class="navbar--nav-link ripple" href="https://github.com/thyagostall">
         <i class="mdi mdi-github-circle"></i>
         <span class="hide-on-medium">Github</span>
       </a>
-      <a class="navbar--nav-link ripple" href="#!">
-        <i class="mdi mdi-google-plus"></i>
-        <span class="hide-on-medium">Google+</span>
+      <a class="navbar--nav-link ripple" href="https://www.facebook.com/thyago.stall">
+        <i class="mdi mdi-facebook"></i>
+        <span class="hide-on-medium">Facebook</span>
       </a>
     </nav>
   </div>
