Changed footer social media icons

--- a/content/themes/ghost-material/default.hbs
+++ b/content/themes/ghost-material/default.hbs
@@ -46,25 +46,20 @@
         <div class="half">
           <ul class="footer--suscriptions">
             <li>
-              <a href="#!">
-                <i class="mdi mdi-twitter-box"></i>
+              <a href="https://www.linkedin.com/in/thyagostall">
+                <i class="mdi mdi-linkedin-box"></i>
               </a>
             </li>
             <li>
-              <a href="#!">
-                <i class="mdi mdi-google-plus-box"></i>
-              </a>
-            </li>
-            <li>
-              <a href="#!">
+              <a href="https://github.com/thyagostall">
                 <i class="mdi mdi-github-box"></i>
               </a>
             </li>
             <li>
-              <a href="{{@blog.url}}/rss/">
-                <i class="mdi mdi-rss-box"></i>
+              <a href="https://www.facebook.com/thyago.stall">
+                <i class="mdi mdi-facebook-box"></i>
               </a>
-            </li>
+            </li>            
           </ul>
         </div>
       </div>
@@ -84,7 +79,7 @@
           <p>
             <i class="mdi mdi-code-tags"></i>
             <a href="http://ghost.org">Ghost</a>
-            <a href="https://github.com/nauzethc/ghost-material">Material</a>
+            <a href="https://github.com/thyagostall/ghost-material">Material</a>
             <i class="mdi mdi-xml"></i>
           </p>
         </div>
