Changed header color for mobile chrome

--- a/content/themes/ghost-material/default.hbs
+++ b/content/themes/ghost-material/default.hbs
@@ -13,7 +13,7 @@
     {{! Page Meta }}
     <title>{{meta_title}}</title>
     <meta name="description" content="{{meta_description}}" />
-    <meta name="theme-color" content="#26a69a">
+    <meta name="theme-color" content="#3f51b5">
 
     {{! CDN resources }}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" />
