--- a/content/themes/ghost-material/partials/author.hbs
+++ b/content/themes/ghost-material/partials/author.hbs
@@ -1,6 +1,7 @@
 <div class="author">
   <div class="author--media">
     <nav class="fabs">
+<!--
       <a class="fab large ripple twitter" href="#!">
         <i class="mdi mdi-twitter"></i>
       </a>
@@ -10,6 +11,16 @@
       <a class="fab large ripple google-plus" href="#!">
         <i class="mdi mdi-google-plus"></i>
       </a>
+-->
+      <a class="fab large ripple github" href="https://www.linkedin.com/in/thyagostall">
+        <i class="mdi mdi-linkedin"></i>
+      </a>
+      <a class="fab large ripple github" href="https://github.com/thyagostall">
+        <i class="mdi mdi-github"></i>
+      </a>
+      <a class="fab large ripple github" href="https://www.facebook.com/thyago.stall">
+        <i class="mdi mdi-facebook"></i>
+      </a>            
     </nav>
     {{#if image}}
       <img class="image" src="{{image}}" />
