Fixed github button on author partial

--- a/content/themes/ghost-material/partials/author.hbs
+++ b/content/themes/ghost-material/partials/author.hbs
@@ -16,7 +16,7 @@
         <i class="mdi mdi-linkedin"></i>
       </a>
       <a class="fab large ripple github" href="https://github.com/thyagostall">
-        <i class="mdi mdi-github"></i>
+        <i class="mdi mdi-github-circle"></i>
       </a>
       <a class="fab large ripple github" href="https://www.facebook.com/thyago.stall">
         <i class="mdi mdi-facebook"></i>
