Added post links onto the card's title

--- a/content/themes/ghost-material/index.hbs
+++ b/content/themes/ghost-material/index.hbs
@@ -59,7 +59,7 @@
       <header class="card--header">
     {{/if}}
         <!-- Title -->
-        <h5 class="card--title" itemprop="headline" href="{{url}}">{{title}}</h5>
+        <h5 class="card--title" itemprop="headline"><a href="{{url}}">{{title}}</a></h5>
         <span class="card--subtitle">
           <i class="fa fa-calendar-o"></i>
 <!--          
